# kodiki-aviahack

./: .flake8  .gitignore  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  localrun.sh  pyproject.toml
backend/app/: requirements.txt
backend/app/core/: settings.py
backend/app/files/: МСК 107_keeping_actual.json  СЗ_keeping_actual.json  Урал_keeping_actual.json
backend/app/persistence/: base.py
backend/app/presentation/: dependencies.py  main.py
backend/app/presentation/routers/: router_app.py
backend/app/schemas/: series.py
backend/app/service/: service_prediction.py  service_storage.py
backend/app/tests/: test_e2e.py
deployment/: deploy_config.yaml  main.tf  outputs.tf
deployment/frontend_s3/: main.tf  variables.tf
deployment/lambda_api/: main.tf  variables.tf
frontend/: 404.html  Dockerfile  README.md  config.js  index.html  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js
frontend/api/: api.ts
frontend/pages/: _app.tsx  _document.tsx  finances.tsx  (+2 more)
ml/: 1_fact_processing.ipynb  Dockerfile  README.md  analitics.ipynb  base_station_processing.ipynb  build_container.sh  concated_df.pkl  dataframes_compilation.ipynb  dfs.pkl  graphs.ipynb  groupe_dfs.pkl  pyproject.toml  requirements.txt
ml/app/: example.env  requirements.txt
ml/app/core/: base.py
ml/app/presentation/: dependencies.py  main.py
ml/app/presentation/routers/: router_app.py
ml/app/schemas/: series.py
ml/app/service/: service_prediction.py
terraform/: deploy_config.yaml  main.tf  outputs.tf  variables.tf
(+30 files in other folders)
