[tool.poetry]
name = "backend-service"
version = "0.1.0"
description = ""
authors = ["Peter Ibragimov"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
fastapi = "^0.79.0"
ujson = ">=5.4.0"
mangum = "^0.15.1"
aws-lambda-powertools = "^1.28.0"
structlog = "^22.1.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
