[tool.poetry]
name = "backend-service"
version = "0.1.0"
description = ""
authors = ["Peter Ibragimov"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
